Mon Dec 07 14:15:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py: Split the
	  SearchResults and SearchResult classes out of
	  searchconnection.py, as a first step to making the code a bit
	  more readable.  Also, minimise the number of imported symbols,
	  get rid of the "*" in "from foo import *", and use the proper
	  names of various imports rather than prefixing them with an
	  underscore.

Sat Dec 05 23:50:15 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/indexerconnection_doctest1.txt: Be less fussy
	  about required text in exception message (it's changed with
	  latest Xapian).

Sat Dec 05 23:37:58 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Link to packages
	  built with new version of xapian.

Wed Dec 02 01:16:00 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,
	  xappy/cachemanager/xapian_manager.py: Use the hash of query
	  strings, rather than the raw strings, to avoid problems with key
	  length limits in xapian.  Store the raw string additionally, so
	  we can report a cache miss in the event of a collision, and so we
	  can iterate through the stored query strings.

Tue Dec 01 23:54:39 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/query_serialise.py: Improve
	  serialisation functions: flatten nested combinations into lists,
	  and improved the serialised representations of these too.  Unify
	  representation of queries joined with .compose(OP_AND) and those
	  joined with &, and similarly for OP_OR and |.

Tue Dec 01 23:53:22 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Add 'Query' to the unserialisation
	  context.  Fix an incorrect return type if a field was specified
	  for geolocation sorting which hadn't been indexed appropriately.

Tue Dec 01 12:42:35 GMT 2009  Richard Boulton <richard@tartarus.org>
